finish migration to netlify

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -3,6 +3,7 @@
 @font-face {
   font-family: 'Product Sans';
   src: url('../assets/ProductSans-Regular.ttf'),
+    url('../assets/ProductSans-Thin.ttf'),
     url('../assets/ProductSans-Medium.ttf'),
     url('../assets/ProductSans-Bold.ttf');
 }
