--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,13 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;0,900;1,500&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
 @font-face {
   font-family: 'Product Sans';
-  src: url('../src/assets/fonts/ProductSans-Regular.ttf'),
-    url('../src/assets/fonts/ProductSans-Thin.ttf'),
-    url('../src/assets/fonts/ProductSans-Medium.ttf'),
-    url('../src/assets/fonts/ProductSans-Bold.ttf');
+  src: url('/fonts/ProductSans-Regular.ttf'), url('/fonts/ProductSans-Thin.ttf'),
+    url('/fonts/ProductSans-Medium.ttf'), url('/fonts/ProductSans-Bold.ttf');
 }
 
 $montserrat: 'Montserrat', sans-serif;
