--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -4,6 +4,8 @@
     url('/fonts/ProductSans-Medium.ttf'), url('/fonts/ProductSans-Bold.ttf');
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap');
+
 $montserrat: 'Montserrat', sans-serif;
 $product-sans: 'Product Sans', 'Open Sans', sans-serif;
 $inter: 'Inter', sans-serif;
