--- a/styles/nprogress.scss
+++ b/styles/nprogress.scss
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #00a3c4;
+  background: #4299e1;
 
   position: fixed;
   z-index: 1031;
@@ -12,7 +12,7 @@
   left: 0;
 
   width: 100%;
-  height: 5px;
+  height: 3px;
 }
 
 /* Fancy blur effect */
