change layout padding, fontfamily

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -7,5 +7,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap');
 
 $montserrat: 'Montserrat', sans-serif;
-$product-sans: 'Product Sans', 'Open Sans', sans-serif;
-$inter: 'Inter', sans-serif;
+$productSans: 'Product Sans', 'Open Sans', sans-serif;
