--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -1,8 +1,9 @@
-$mainColor: #bee3f8;
+$mainColor: #38b2ac;
 
 .markdown {
+  color: #2d3748;
   *:not(code) {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Product Sans', sans-serif;
   }
 
   time {
@@ -10,13 +11,13 @@ $mainColor: #bee3f8;
   }
 
   p {
-    line-height: 1.5rem;
+    line-height: 1.7rem;
     margin: 1.5rem 0 0 0;
   }
 
   p,
   li {
-    font-family: $inter;
+    font-family: $productSans;
   }
 
   a {
@@ -169,6 +170,10 @@ $mainColor: #bee3f8;
     margin: 0;
   }
 
+  ol li {
+    font-size: 1.5rem;
+  }
+
   abbr[title] {
     text-decoration: underline double;
   }
@@ -178,9 +183,14 @@ $mainColor: #bee3f8;
   }
 
   img {
-    width: 100%;
+    width: 50%;
+    margin: 0 auto;
+    @media (max-width: 760px) {
+      width: 100%;
+    }
   }
 
+  // Ipad
   @media (min-width: 769px) {
     h2,
     h3,
