add author and category to article card

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,7 +1,8 @@
 @font-face {
-  font-family: 'Product Sans';
-  src: url('/fonts/ProductSans-Regular.ttf'), url('/fonts/ProductSans-Thin.ttf'),
-    url('/fonts/ProductSans-Medium.ttf'), url('/fonts/ProductSans-Bold.ttf');
+    font-family: 'Product Sans';
+    src: url('/fonts/ProductSans-Regular.ttf'),
+        url('/fonts/ProductSans-Thin.ttf'), url('/fonts/ProductSans-Medium.ttf'),
+        url('/fonts/ProductSans-Bold.ttf');
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap');
