--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -170,10 +170,6 @@ $mainColor: #38b2ac;
     margin: 0;
   }
 
-  ol li {
-    font-size: 1.5rem;
-  }
-
   abbr[title] {
     text-decoration: underline double;
   }
@@ -183,8 +179,8 @@ $mainColor: #38b2ac;
   }
 
   img {
-    width: 50%;
-    margin: 0 auto;
+    max-height: 500px;
+    margin: 1rem auto;
     @media (max-width: 760px) {
       width: 100%;
     }
