modify card, hero images, and fix fonts

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,8 +1,25 @@
 @font-face {
-    font-family: 'Product Sans';
-    src: url('/fonts/ProductSans-Regular.ttf'),
-        url('/fonts/ProductSans-Thin.ttf'), url('/fonts/ProductSans-Medium.ttf'),
-        url('/fonts/ProductSans-Bold.ttf');
+  font-family: 'Product Sans';
+  src: url('/fonts/ProductSans-Bold.ttf');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Product Sans';
+  src: url('/fonts/ProductSans-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Product Sans';
+  src: url('/fonts/ProductSans-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Product Sans';
+  src: url('/fonts/ProductSans-Thin.ttf');
+  font-weight: 300;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap');
