remove unused css

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,2 @@
-@import './fonts';
-@import './reset';
-@import './pages';
-@import './article';
-@import './hero';
-@import './masonry';
-@import './grid';
-@import './markdown';
+@import "./fonts";
+@import "./markdown";
